--- a/menus.css
+++ b/menus.css
@@ -1,31 +1,36 @@
-.menus{
-    display:flex;
+.menus {
+    display: flex;
     justify-content: center;
-    gap:20px;
+    gap: 20px;
     align-items: center;
 }
-.active-option{
- background-color: #d0d8e0;   
+
+.active-option {
+    background-color: #93969a;
 }
-.menus>div{
+
+.menus>div {
     padding: 10px;
     cursor: pointer;
     transition: 0.5s;
     border-radius: 4px;
 }
-.menus>div:hover{
-background-color: #d0d8e0aa;
+
+.menus>div:hover {
+    background-color: #93969a;
 }
 
+.menus .material-icons,
+.menus .fas {
+    font-size: 18px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+@media (max-width: 900px) {
+    .menus{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(7rem , auto));
+        gap: 20px;
+        height: auto;
+        width: 100%;
+    }
+}
